removed overflow-y and removed fixed height on the screen

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,4 @@
 * {
-  overflow-y: hidden;
   overflow-x: hidden;
 }
 
@@ -35,7 +34,6 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
 }
 
 nav ul {
